# geoclue-provider-hybris-community

geoclue-provider-hybris-community/: AUTHORS  LICENSE  Makefile.am  configure.ac  geoclue-hybris.c  geoclue-hybris.provider  org.freedesktop.Geoclue.Providers.Hybris.service.in
rpm/: geoclue-provider-hybris-community.spec
